apps/story/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story
  namespace: nori-cloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: story
  template:
    metadata:
      labels:
        app: story
    spec:
      containers:
        - image: ghcr.io/nori-cloud/story:233c044
          name: story
          ports:
            - containerPort: 3000
