apps/story/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: story
  namespace: nori-cloud
  labels:
    app: story
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`story.norriswu.me`)
      kind: Rule
      services:
        - name: story
          port: 3000
